# gaia_access

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  generate_code.py  generate_code.sh  publish.sh  test.sh
.github/workflows/: check_for_updates.yml  tests.yml
scripts/: generate_code.py  generate_code.sh
src/: column.rs  columns.rs  completeness.rs  condition.rs  error.rs  lib.rs  query.rs  result.rs  schema.rs  table.rs  test_completeness.rs  traits.rs
src/data/: mod.rs
src/data/gaiadr1/: mod.rs
src/data/gaiadr2/: mod.rs
src/data/gaiadr3/: mod.rs
src/data/gaiaedr3/: mod.rs
src/data/gaiafpr/: mod.rs
src/data/job_upload/: mod.rs
src/data/public/: mod.rs
src/data/tap_config/: mod.rs
src/data/tap_schema/: mod.rs
src/data/tap_upload/: mod.rs
src/gaiadr1/: mod.rs
src/gaiadr2/: mod.rs
src/gaiadr3/: mod.rs
src/gaiadr3/agn_cross_id/: mod.rs
src/gaiadr3/alerts_mixedin_sourceids/: mod.rs
src/gaiadr3/allwise_best_neighbour/: mod.rs
src/gaiadr3/allwise_neighbourhood/: mod.rs
src/gaiadr3/apassdr9_best_neighbour/: mod.rs
src/gaiadr3/apassdr9_join/: mod.rs
src/gaiadr3/apassdr9_neighbourhood/: mod.rs
src/gaiadr3/astrophysical_parameters/: mod.rs
src/gaiadr3/astrophysical_parameters_supp/: mod.rs
src/gaiadr3/binary_masses/: mod.rs
src/gaiadr3/chemical_cartography/: mod.rs
src/gaiadr3/commanded_scan_law/: mod.rs
src/gaiaedr3/: mod.rs
src/gaiafpr/: mod.rs
src/job_upload/: mod.rs
src/public/: mod.rs
src/tap_config/: mod.rs
src/tap_schema/: mod.rs
src/tap_upload/: mod.rs
tests/: completeness.rs  requests.rs
(+260 files in other folders)
